--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@types/node": "^18.0.6",
     "axios": "^1.1.3",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
